Fixed Game component overflow out of parent div issue.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.AppContainer {
+  width: 100%;
+  min-width: 500px;
+}
