--- a/src/Components/Game/style.css
+++ b/src/Components/Game/style.css
@@ -2,7 +2,7 @@
     display: flex;
     margin: auto;
     flex-direction: row;
-    width: 50%;
-    min-width: 500px;
+    width: 100%;
+    max-width: 500px;
     justify-content: center;
 }
